--- a/client/src/pages/UserProfile/component/EditProfile/EditProfile.scss
+++ b/client/src/pages/UserProfile/component/EditProfile/EditProfile.scss
@@ -29,6 +29,8 @@ display-flex {
 }
 .img-account-profile-handle {
     height: 10rem;
+    width: 10rem;
+    object-fit: cover;
     border-radius: 50% !important;
 }
 .card-handle {
