--- a/client/src/pages/UserProfile/Profile.scss
+++ b/client/src/pages/UserProfile/Profile.scss
@@ -200,13 +200,13 @@ h5,
         opacity: 0.3;
     }
     .user-logo {
-        .img {
+        img.img {
             width: 100px;
             height: 100px;
             border-radius: 50%;
             margin: 0 auto;
             margin-bottom: 10px;
-            background-image: url('./images/avatar1.png');
+            
         }
         h3 {
             color: $white;
