--- a/client/src/layouts/components/Header/Header.scss
+++ b/client/src/layouts/components/Header/Header.scss
@@ -63,7 +63,9 @@
                 display: flex;
                 align-items: center;
                 gap: 10px;
-
+                img{
+                    width: 120px;
+                }
                 .main-navbar-nav {
                     display: flex;
                     align-items: center;
